refactor[ticho]: 代码优化